--- a/data/build.gradle
+++ b/data/build.gradle
@@ -7,8 +7,7 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
 }
-
 dependencies {
-    implementation project(path: ':domain')
-    implementation project(path: ':data')
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
