--- a/feature_main_android/build.gradle
+++ b/feature_main_android/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03"
