--- a/core_android/build.gradle
+++ b/core_android/build.gradle
@@ -32,10 +32,18 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':domain')
     implementation project(path: ':core')
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
+
+
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03"
+    def nav_version = "2.3.5"
+    api "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    api "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
