--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,21 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':core')
+    implementation project(path: ':data')
+    implementation project(path: ':mvi')
     implementation project(path: ':feature_main_android')
+    implementation project(path: ':use_case_impl')
+    implementation project(path: ':repo_impl')
+
+    implementation "io.insert-koin:koin-android:3.1.2"
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation project(path: ':domain')
 
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -53,6 +62,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
