--- a/common_android/build.gradle
+++ b/common_android/build.gradle
@@ -33,10 +33,16 @@ android {
 
 dependencies {
     implementation project(path: ':domain')
-    implementation project(path: ':mvi')
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03"
+    def nav_version = "2.3.5"
+    api "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    api "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
