--- a/feature_main_android/build.gradle
+++ b/feature_main_android/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':feature_main')
     implementation project(path: ':mvi_android')
+    implementation project(path: ':common_android')
 
     implementation "io.insert-koin:koin-android:3.1.2"
 
