--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ include ':mvi_android'
 include ':feature_main'
 include ':feature_main_android'
 include ':domain'
-include ':repo_impl'
-include ':use_case_impl'
+include ':domain_impl'
+include ':common_android'
