--- a/domain_impl/build.gradle
+++ b/domain_impl/build.gradle
@@ -9,5 +9,8 @@ java {
 }
 dependencies {
     implementation project(path: ':domain')
+    implementation "io.insert-koin:koin-core:3.1.2"
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
