data module setup

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ include ':feature_main_android'
 include ':domain'
 include ':domain_impl'
 include ':common_android'
+include ':data'
+include ':data_impl'
