--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':feature_main_android')
     implementation project(path: ':domain_impl')
+    implementation project(path: ':data_impl')
 
     implementation "io.insert-koin:koin-android:3.1.2"
 
