--- a/mvi_android/build.gradle
+++ b/mvi_android/build.gradle
@@ -33,7 +33,7 @@ android {
 
 dependencies {
     implementation project(path: ':domain')
-    implementation project(path: ':mvi')
+    api project(path: ':mvi')
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
