--- a/data_impl/build.gradle
+++ b/data_impl/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation "io.insert-koin:koin-core:3.1.2"
 
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+
     implementation 'androidx.appcompat:appcompat:1.3.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -47,6 +49,9 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation 'com.google.firebase:firebase-common-ktx:20.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.3'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
