--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,18 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    signingConfigs {
+        debug {
+            keyAlias 'alias'
+            keyPassword '123456'
+            storeFile file("debug_keystore.jks")
+            storePassword '123456'
+        }
+    }
     buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
