--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,10 @@ dependencies {
     implementation project(path: ':data_impl')
 
     implementation "io.insert-koin:koin-android:3.1.2"
-
+    
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
     implementation 'androidx.core:core-ktx:1.6.0'
+
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
 
@@ -67,6 +69,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
     def work_version = "2.5.0"
     implementation "androidx.work:work-runtime-ktx:$work_version"
