refactoring/15 auth refactoring

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,6 @@ include ':domain_impl'
 include ':common_android'
 include ':data'
 include ':data_impl'
+include ':feature_auth_android'
+include ':navigation'
+include ':feature_auth'
