--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,11 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':feature_auth_android')
     implementation project(path: ':feature_main_android')
     implementation project(path: ':domain_impl')
     implementation project(path: ':data_impl')
+    implementation project(path: ':navigation')
 
     implementation "io.insert-koin:koin-android:3.1.2"
     
