--- a/common_android/build.gradle
+++ b/common_android/build.gradle
@@ -32,14 +32,20 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':domain')
+    api project(path: ':domain')
+    api project(path: ':navigation')
+    api project(path: ':mvi_android')
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    api "io.insert-koin:koin-android:3.1.2"
+
+    api 'androidx.core:core-ktx:1.6.0'
+    api 'androidx.appcompat:appcompat:1.3.1'
+    api 'com.google.android.material:material:1.4.0'
 
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03"
+
     def nav_version = "2.3.5"
     api "androidx.navigation:navigation-fragment-ktx:$nav_version"
     api "androidx.navigation:navigation-ui-ktx:$nav_version"
