--- a/feature_auth_android/build.gradle
+++ b/feature_auth_android/build.gradle
@@ -35,6 +35,11 @@ dependencies {
     implementation project(path: ':feature_auth')
     implementation project(path: ':common_android')
 
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
