feature/8-basic_profile_setup_done

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ include ':data_impl'
 include ':feature_auth_android'
 include ':navigation'
 include ':feature_auth'
+include ':feature_profile_android'
+include ':feature_profile'
