--- a/common_android/build.gradle
+++ b/common_android/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     api project(path: ':mvi_android')
 
     api "io.insert-koin:koin-android:3.1.2"
+    api 'com.github.bumptech.glide:glide:4.12.0'
 
     api 'androidx.core:core-ktx:1.6.0'
     api 'androidx.appcompat:appcompat:1.3.1'
