--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,60 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    projectCompileSdk = 31
+    projectTargetSdk = 30
+    projectMinSdk = 21
+    buildTools = "31.0.0"
+
+    coroutines = [
+            core                    : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1",
+            coroutines_play_services: 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+    ]
+    koin = [
+            android: "io.insert-koin:koin-android:3.1.2",
+            core   : "io.insert-koin:koin-core:3.1.2"
+    ]
+    android_sdk = [
+            core               : "androidx.core:core-ktx:1.6.0",
+            appcompat          : 'androidx.appcompat:appcompat:1.3.1',
+            material           : 'com.google.android.material:material:1.4.0',
+            fragment           : 'androidx.fragment:fragment-ktx:1.4.0-alpha08',
+            worker             : "androidx.work:work-runtime-ktx:2.5.0",
+            navigation_fragment: "androidx.navigation:navigation-fragment-ktx:2.3.5",
+            navigation_ui      : "androidx.navigation:navigation-ui-ktx:2.3.5",
+            lifecycle_viewmodel: "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03",
+            room_runtime       : "androidx.room:room-runtime:2.4.0-alpha04",
+            room_ktx           : "androidx.room:room-ktx:2.4.0-alpha04",
+            room_compiler      : "androidx.room:room-compiler:2.4.0-alpha04",
+            swiperefreshlayout : "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    ]
+
+    firebase = [
+            bom        : "com.google.firebase:firebase-bom:28.4.0",
+            analytics  : "com.google.firebase:firebase-analytics-ktx",
+            crashlytics: "com.google.firebase:firebase-crashlytics-ktx",
+            performance: "com.google.firebase:firebase-perf-ktx",
+            firestore  : 'com.google.firebase:firebase-firestore-ktx',
+            auth       : 'com.google.firebase:firebase-auth-ktx',
+            auth_ui    : 'com.firebaseui:firebase-ui-auth:4.3.2',
+    ]
+
+    google = [
+            play_services_auth: 'com.google.android.gms:play-services-auth:19.2.0'
+    ]
+    test = [
+            junit    : 'junit:junit:4.13.2',
+            junit_ext: 'androidx.test.ext:junit:1.1.2',
+            espresso : 'androidx.test.espresso:espresso-core:3.3.0'
+    ]
+
+    network = [
+            retrofit          : 'com.squareup.retrofit2:retrofit:2.9.0',
+            retrofit_converter: 'com.squareup.retrofit2:converter-gson:2.9.0'
+    ]
+    util = [
+            glide: "com.github.bumptech.glide:glide:4.12.0"
+    ]
+}
