--- a/common_android/build.gradle
+++ b/common_android/build.gradle
@@ -4,11 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk projectCompileSdk
+    buildToolsVersion buildTools
 
     defaultConfig {
-        minSdk 21
-        targetSdk 30
+        minSdk projectMinSdk
+        targetSdk projectTargetSdk
         versionCode 1
         versionName "1.0"
 
@@ -36,22 +37,19 @@ dependencies {
     api project(path: ':navigation')
     api project(path: ':mvi_android')
 
-    api "io.insert-koin:koin-android:3.1.2"
-    api 'com.github.bumptech.glide:glide:4.12.0'
+    api koin.android
+    api util.glide
 
-    api 'androidx.core:core-ktx:1.6.0'
-    api 'androidx.appcompat:appcompat:1.3.1'
-    api 'com.google.android.material:material:1.4.0'
+    api android_sdk.core
+    api android_sdk.appcompat
+    api android_sdk.material
+    api android_sdk.navigation_fragment
+    api android_sdk.navigation_ui
+    implementation android_sdk.lifecycle_viewmodel
 
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+    api coroutines.core
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03"
-
-    def nav_version = "2.3.5"
-    api "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    api "androidx.navigation:navigation-ui-ktx:$nav_version"
-
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation test.junit
+    androidTestImplementation test.junit_ext
+    androidTestImplementation test.espresso
 }
