--- a/data_impl/build.gradle
+++ b/data_impl/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    compileSdk 30
-
+    compileSdk projectCompileSdk
+    buildToolsVersion buildTools
     defaultConfig {
-        minSdk 21
-        targetSdk 30
+        minSdk projectMinSdk
+        targetSdk projectTargetSdk
         versionCode 1
         versionName "1.0"
 
@@ -41,27 +41,25 @@ android {
 dependencies {
     api project(path: ':data')
     implementation project(path: ':domain')
-    implementation "io.insert-koin:koin-core:3.1.2"
 
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation coroutines.coroutines_play_services
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation koin.core
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api android_sdk.core
+    api android_sdk.appcompat
+    implementation android_sdk.room_runtime
+    implementation android_sdk.room_ktx
+    kapt android_sdk.room_compiler
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+    implementation network.retrofit
+    implementation network.retrofit_converter
 
-    implementation platform('com.google.firebase:firebase-bom:28.4.0')
-    implementation 'com.google.firebase:firebase-firestore-ktx'
-    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation platform(firebase.bom)
+    implementation firebase.firestore
+    implementation firebase.auth
 
-    def room_version = "2.4.0-alpha04"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation test.junit
+    androidTestImplementation test.junit_ext
+    androidTestImplementation test.espresso
 }
