--- a/feature_main_android/build.gradle
+++ b/feature_main_android/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 30
-
+    compileSdk projectCompileSdk
+    buildToolsVersion buildTools
     defaultConfig {
-        minSdk 21
-        targetSdk 30
+        minSdk projectMinSdk
+        targetSdk projectTargetSdk
         versionCode 1
         versionName "1.0"
 
@@ -35,9 +35,9 @@ dependencies {
     implementation project(path: ':feature_main')
     implementation project(path: ':common_android')
 
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation android_sdk.swiperefreshlayout
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation test.junit
+    androidTestImplementation test.junit_ext
+    androidTestImplementation test.espresso
 }
