--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,5 @@ include ':navigation'
 include ':feature_auth'
 include ':feature_profile_android'
 include ':feature_profile'
+include ':feature_accepted_activities'
+include ':feature_accepted_activities_android'
