--- a/settings.gradle
+++ b/settings.gradle
@@ -22,5 +22,5 @@ include ':navigation'
 include ':feature_auth'
 include ':feature_profile_android'
 include ':feature_profile'
-include ':feature_accepted_activities'
-include ':feature_accepted_activities_android'
+include ':feature_promises'
+include ':feature_promises_android'
