--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ ext {
             retrofit_converter: 'com.squareup.retrofit2:converter-gson:2.9.0'
     ]
     util = [
-            glide: "com.github.bumptech.glide:glide:4.12.0"
+            glide: "com.github.bumptech.glide:glide:4.12.0",
+            leakcanary: 'com.squareup.leakcanary:leakcanary-android:2.7'
     ]
 }
