feature/14 add dynamic text firebase config

--- a/data_impl/build.gradle
+++ b/data_impl/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation platform(firebase.bom)
     implementation firebase.firestore
     implementation firebase.auth
+    implementation firebase.remote_config
 
     testImplementation test.junit
     androidTestImplementation test.junit_ext
