--- a/build.gradle
+++ b/build.gradle
@@ -47,13 +47,14 @@ ext {
     ]
 
     firebase = [
-            bom        : "com.google.firebase:firebase-bom:28.4.0",
-            analytics  : "com.google.firebase:firebase-analytics-ktx",
-            crashlytics: "com.google.firebase:firebase-crashlytics-ktx",
-            performance: "com.google.firebase:firebase-perf-ktx",
-            firestore  : 'com.google.firebase:firebase-firestore-ktx',
-            auth       : 'com.google.firebase:firebase-auth-ktx',
-            auth_ui    : 'com.firebaseui:firebase-ui-auth:4.3.2',
+            bom          : "com.google.firebase:firebase-bom:28.4.0",
+            analytics    : "com.google.firebase:firebase-analytics-ktx",
+            crashlytics  : "com.google.firebase:firebase-crashlytics-ktx",
+            performance  : "com.google.firebase:firebase-perf-ktx",
+            firestore    : 'com.google.firebase:firebase-firestore-ktx',
+            auth         : 'com.google.firebase:firebase-auth-ktx',
+            auth_ui      : 'com.firebaseui:firebase-ui-auth:4.3.2',
+            remote_config: 'com.google.firebase:firebase-config-ktx',
     ]
 
     google = [
@@ -70,7 +71,7 @@ ext {
             retrofit_converter: 'com.squareup.retrofit2:converter-gson:2.9.0'
     ]
     util = [
-            glide: "com.github.bumptech.glide:glide:4.12.0",
+            glide     : "com.github.bumptech.glide:glide:4.12.0",
             leakcanary: 'com.squareup.leakcanary:leakcanary-android:2.7'
     ]
 }
