--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':feature_profile_android'
 include ':feature_profile'
 include ':feature_promises'
 include ':feature_promises_android'
+include ':audit'
