--- a/common_android/build.gradle
+++ b/common_android/build.gradle
@@ -36,9 +36,11 @@ dependencies {
     api project(path: ':domain')
     api project(path: ':navigation')
     api project(path: ':mvi_android')
+    api project(path: ':audit')
 
     api koin.android
 
+    api util.timber
     api android_sdk.core
     api android_sdk.appcompat
     api android_sdk.material
