--- a/mvi/build.gradle
+++ b/mvi/build.gradle
@@ -7,3 +7,6 @@ java {
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
 }
+dependencies {
+    api project(path: ':audit')
+}
