--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,10 +20,10 @@ jobs:
         distribution: 'adopt'
         cache: gradle
         
+    - name: unit tests
+      run: ./gradlew test
     - name: build release 
-      run: |
-        ./gradlew test
-        ./gradlew assembleRelease
+      run: ./gradlew assembleRelease
     - name: upload artifact to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1
       with:
@@ -31,4 +31,3 @@ jobs:
         token: ${{secrets.FIREBASE_TOKEN}}
         groups: testers
         file: app/build/outputs/apk/development/release/app-development-release.apk
-
