--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,15 +20,11 @@ jobs:
         distribution: 'adopt'
         cache: gradle
         
-    - name: unit tests
+    - name: Unit tests
       run: ./gradlew test
-    - name: build release 
-      run: |
-        ./gradlew assembleRelease
-        ./gradlew assembleReleaseAndroidTest
-    - name: Run Instrumentation Tests in Firebase Test Lab
-      run: gcloud firebase test android run --type instrumentation --app app-development-release/app-development-release.apk --test app-development-release-androidTest/app-development-release-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
-    - name: upload artifact to Firebase App Distribution
+    - name: Build release 
+      run: ./gradlew assembleRelease
+    - name: Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1
       with:
         appId: ${{secrets.FIREBASE_APP_ID}}
