--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,33 +7,41 @@ on:
     branches: [ development ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  test:
+    name: Unit Tests
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: gradle
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Run Unit tests
+        run: bash ./gradlew test --stacktrace
         
-    - name: Unit tests
-      run: ./gradlew test
-    - name: Build release 
-      run: ./gradlew assembleRelease
-    - name: Run tests on Firebase Test Lab
-      uses: asadmansr/Firebase-Test-Lab-Action@v1.0
-      with:
-          arg-spec: 'tests.yml:android-pixel-4'
-      env:
-          SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
-    - name: Firebase App Distribution
-      uses: wzieba/Firebase-Distribution-Github-Action@v1
-      with:
-        appId: ${{secrets.FIREBASE_APP_ID}}
-        token: ${{secrets.FIREBASE_TOKEN}}
-        groups: testers
-        file: app/build/outputs/apk/development/release/app-development-release.apk
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: set up JDK 11
+#       uses: actions/setup-java@v2
+#       with:
+#         java-version: '11'
+#         distribution: 'adopt'
+#         cache: gradle
+        
+#     - name: Unit tests
+#       run: ./gradlew test
+#     - name: Build release 
+#       run: ./gradlew assembleRelease
+#     - name: Run tests on Firebase Test Lab
+#       uses: asadmansr/Firebase-Test-Lab-Action@v1.0
+#       with:
+#           arg-spec: 'tests.yml:android-pixel-4'
+#       env:
+#           SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
+#     - name: Firebase App Distribution
+#       uses: wzieba/Firebase-Distribution-Github-Action@v1
+#       with:
+#         appId: ${{secrets.FIREBASE_APP_ID}}
+#         token: ${{secrets.FIREBASE_TOKEN}}
+#         groups: testers
+#         file: app/build/outputs/apk/development/release/app-development-release.apk
