--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,27 +38,28 @@ jobs:
           name: app-development-debug-androidTest
           path: app/build/outputs/apk/androidTest/development/debug/app-development-debug-androidTest.apk
         
-      - name: Download app APK
-        uses: actions/download-artifact@v1
-        with:
-          name: app-development-debug
+#       - name: Download app APK
+#         uses: actions/download-artifact@v1
+#         with:
+#           name: app-development-debug
           
-      - name: Download Android test APK
-        uses: actions/download-artifact@v1
-        with:
-          name: app-development-debug-androidTest
+#       - name: Download Android test APK
+#         uses: actions/download-artifact@v1
+#         with:
+#           name: app-development-debug-androidTest
           
-      - name: Login to Google Cloud
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-        with: 
-          version: '270.0.0' 
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
+#       - name: Login to Google Cloud
+#         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+#         with: 
+#           version: '270.0.0' 
+#           service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
           
-      - name: Set current project
-        run: gcloud config set project ${{ secrets.FIREBASE_APP_ID }}
+#       - name: Set current project
+#         run: gcloud config set project ${{ secrets.FIREBASE_APP_ID }}
         
-      - name: Run Instrumentation Tests in Firebase Test Lab
-        run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
+#       - name: Run Instrumentation Tests in Firebase Test Lab
+#         run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
+
 #     steps:
 #     - uses: actions/checkout@v2
 #     - name: set up JDK 11
