--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -57,8 +57,8 @@ jobs:
       - name: Set current project
         run: gcloud config set project ${{ secrets.FIREBASE_APP_ID }}
         
-      - name: Run Instrumentation Tests in Firebase Test Lab
-        run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
+#       - name: Run Instrumentation Tests in Firebase Test Lab
+#         run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
 
 #     steps:
 #     - uses: actions/checkout@v2
