--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -54,8 +54,8 @@ jobs:
           version: '270.0.0' 
           service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
           
-      - name: Set current project
-        run: gcloud config set project ${{ secrets.FIREBASE_APP_ID }}
+#       - name: Set current project
+#         run: gcloud config set project ${{ secrets.FIREBASE_APP_ID }}
         
 #       - name: Run Instrumentation Tests in Firebase Test Lab
 #         run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
