setup instrumented test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testBuildType System.getProperty('testBuildType', 'debug')
     }
     signingConfigs {
         development {
@@ -32,7 +33,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    // Specifies one flavor dimension.
+
     flavorDimensions "version"
     productFlavors {
         development {
@@ -44,6 +45,7 @@ android {
             dimension "version"
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
