26 - setup use case

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
         development {
             signingConfig signingConfigs.development
             dimension "version"
+            versionNameSuffix "-development"
         }
         production {
             dimension "version"
