#30 done promise ui setup

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,6 @@ include ':navigation'
 include ':feature_auth'
 include ':feature_profile_android'
 include ':feature_profile'
-include ':feature_promises'
-include ':feature_promises_android'
+include ':feature_promise'
+include ':feature_promise_android'
 include ':audit'
