--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     implementation project(path: ':feature_auth_android')
     implementation project(path: ':feature_main_android')
     implementation project(path: ':feature_profile_android')
-    implementation project(path: ':feature_promises_android')
+    implementation project(path: ':feature_promise_android')
     implementation project(path: ':domain_impl')
     implementation project(path: ':data_impl')
     implementation project(path: ':navigation')
