--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation util.timber
 
     implementation project(path: ':feature_auth_android')
-    implementation project(path: ':feature_main_android')
+    implementation project(path: ':feature_idea_android')
     implementation project(path: ':feature_profile_android')
     implementation project(path: ':feature_promise_android')
     implementation project(path: ':domain_impl')
