--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,8 @@ rootProject.name = "Patterns"
 include ':app'
 include ':mvi'
 include ':mvi_android'
-include ':feature_main'
-include ':feature_main_android'
+include ':feature_idea'
+include ':feature_idea_android'
 include ':domain'
 include ':domain_impl'
 include ':common_android'
