--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':feature_profile'
 include ':feature_promise'
 include ':feature_promise_android'
 include ':audit'
+include ':feature_mainframe_android'
