--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':feature_promise'
 include ':feature_promise_android'
 include ':audit'
 include ':feature_mainframe_android'
+include ':feature_mainframe'
