--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,7 @@ include ':domain'
 include ':domain_impl'
 include ':common_android'
 include ':data'
-include ':data_impl'
+include ':data_android'
 include ':feature_auth_android'
 include ':navigation'
 include ':feature_auth'
@@ -27,3 +27,4 @@ include ':feature_promise_android'
 include ':audit'
 include ':feature_mainframe_android'
 include ':feature_mainframe'
+include ':domain_android'
