--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,6 @@ include ':common_android'
 include ':data'
 include ':data_android'
 include ':feature_auth_android'
-include ':navigation'
 include ':feature_auth'
 include ':feature_profile_android'
 include ':feature_profile'
@@ -28,3 +27,5 @@ include ':audit'
 include ':feature_mainframe_android'
 include ':feature_mainframe'
 include ':domain_android'
+include ':data_impl'
+include ':audit_android'
