--- a/audit_android/build.gradle
+++ b/audit_android/build.gradle
@@ -6,7 +6,6 @@ plugins {
 android {
     compileSdk projectCompileSdk
     buildToolsVersion buildTools
-
     defaultConfig {
         minSdk projectMinSdk
         targetSdk projectTargetSdk
@@ -24,8 +23,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -33,19 +32,10 @@ android {
 }
 
 dependencies {
-    api project(path: ':domain')
-    api project(path: ':mvi_android')
-    api project(path: ':audit')
-
-    api koin.android
-
-    api util.timber
-    api android_sdk.core
-    api android_sdk.appcompat
-    api android_sdk.material
-    api android_sdk.navigation_fragment
-    api android_sdk.navigation_ui
-    implementation android_sdk.lifecycle_viewmodel
+    implementation project(path: ':audit')
+    
+    implementation util.timber
+    implementation koin.core
 
     testImplementation test.junit
     androidTestImplementation test.junit_ext
