--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,10 @@ android {
             storePassword '123456'
         }
         production {
-            keyAlias keystore_promise_release_alias
-            keyPassword keystore_promise_release_pass_key
-            storeFile file(keystore_promise_release_jks)
-            storePassword keystore_promise_release_pass_store
+            keyAlias "keystore_promise_release_alias"
+            keyPassword "keystore_promise_release_pass_key"
+            storeFile file("keystore_promise_release_jks")
+            storePassword "keystore_promise_release_pass_store"
         }
     }
     buildTypes {
