--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,7 +30,7 @@ jobs:
           java-version: '11'
             
       - name: Assemble app debug APK
-        run: bash ./gradlew assemble
+        run: bash ./gradlew assembleDevelopmentRelease
         
       - name: Upload app APK
         uses: actions/upload-artifact@v1
@@ -39,7 +39,7 @@ jobs:
           path: app/build/outputs/apk/development/release/app-development-release.apk
           
       - name: Assemble Android Instrumentation Tests
-        run: bash ./gradlew assembleAndroidTest -DtestBuildType=release
+        run: bash ./gradlew assembleDevelopmentReleaseAndroidTest -DtestBuildType=release
         
       - name: Upload Android Test APK
         uses: actions/upload-artifact@v1
