remove unused tests

--- a/feature_promise/build.gradle
+++ b/feature_promise/build.gradle
@@ -13,9 +13,9 @@ dependencies {
 
     implementation koin.core
 
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'androidx.test.ext:junit:1.1.2'
-    testImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation testing.junit
+    testImplementation testing.junit_ext
+    testImplementation testing.espresso
+    testImplementation testing.mockito
 
 }
