--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,6 @@ dependencies {
     implementation firebase.crashlytics
     implementation firebase.performance
 
-    testImplementation test.junit
-    androidTestImplementation test.junit_ext
-    androidTestImplementation test.espresso
+    androidTestImplementation testing.junit_ext
+    androidTestImplementation testing.espresso
 }
