--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ ext {
     google = [
             play_services_auth: 'com.google.android.gms:play-services-auth:19.2.0'
     ]
-    test = [
+    testing = [
             junit    : 'junit:junit:4.13.2',
             junit_ext: 'androidx.test.ext:junit:1.1.2',
             espresso : 'androidx.test.espresso:espresso-core:3.3.0',
@@ -68,7 +68,6 @@ ext {
             robolectric : 'org.robolectric:robolectric:4.4',
             arch_core : 'android.arch.core:core-testing:1.1.1'
     ]
-
     network = [
             retrofit          : 'com.squareup.retrofit2:retrofit:2.9.0',
             retrofit_converter: 'com.squareup.retrofit2:converter-gson:2.9.0'
