--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-}
+    }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21'
@@ -61,12 +61,12 @@ ext {
             play_services_auth: 'com.google.android.gms:play-services-auth:19.2.0'
     ]
     testing = [
-            junit    : 'junit:junit:4.13.2',
-            junit_ext: 'androidx.test.ext:junit:1.1.2',
-            espresso : 'androidx.test.espresso:espresso-core:3.3.0',
-            mockito : 'org.mockito:mockito-core:3.11.2',
-            robolectric : 'org.robolectric:robolectric:4.4',
-            arch_core : 'android.arch.core:core-testing:1.1.1'
+            junit      : 'junit:junit:4.13.2',
+            junit_ext  : 'androidx.test.ext:junit:1.1.2',
+            espresso   : 'androidx.test.espresso:espresso-core:3.3.0',
+            mockito    : 'org.mockito:mockito-core:3.11.2',
+            robolectric: 'org.robolectric:robolectric:4.4',
+            arch_core  : 'android.arch.core:core-testing:1.1.1'
     ]
     network = [
             retrofit          : 'com.squareup.retrofit2:retrofit:2.9.0',
@@ -76,5 +76,11 @@ ext {
             glide     : "com.github.bumptech.glide:glide:4.12.0",
             leakcanary: 'com.squareup.leakcanary:leakcanary-android:2.7',
             timber    : "com.jakewharton.timber:timber:5.0.1"
+    ]
+    compose = [
+            ui              : "androidx.compose.ui:ui:1.0.5",
+            material        : 'androidx.compose.material:material:1.0.5',
+            ui_tooling      : 'androidx.compose.ui:ui-tooling:1.0.5',
+            runtime_livedata: "androidx.compose.runtime:runtime-livedata:1.0.5"
     ]
 }
