--- a/data_impl/build.gradle
+++ b/data_impl/build.gradle
@@ -11,6 +11,9 @@ dependencies {
     api project(path: ':data')
     implementation project(path: ':domain')
 
+    implementation 'androidx.datastore:datastore-core:1.0.0'
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+
     implementation koin.core
 
     implementation network.retrofit
